--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Artrios                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Pokemon RomhHacker doing RomHack stuff.   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
@@ -34,18 +34,20 @@ url: https://Artrios.github.io
 github:
   username: Artrios             # change to your github username
 
-twitter:
-  username: twitter_username            # change to your twitter username
+#discord:
+#  username: Paccy#3976
+#twitter:
+#  username: twitter_username            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Artrios
+#  email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+#    - https://twitter.com/username      # change to your twitter homepage
+    - https://github.com/Artrios       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -137,6 +139,8 @@ collections:
   tabs:
     output: true
     sort_by: order
+  projects:
+    output: true
 
 defaults:
   - scope:
@@ -167,6 +171,14 @@ defaults:
       path: assets/js/dist
     values:
       swcache: true
+  - scope:
+      path: ''
+      type: projects             # see `site.collections`
+    values:
+      layout: project
+      toc: true
+      comments: false    # Enable comments in posts.
+      permalink: /projects/:title/
 
 sass:
   style: compressed
