--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -9,7 +9,7 @@
   url:  https://discordapp.com/users/722308385793638502
 -
   type: pokecommunity
-  icon: 'fas fa-rss'
+  icon: 'fab fa-game-console-handheld'
   url: https://www.pokecommunity.com/member.php?u=151157
 -
 #  type: twitter
